# Agent-Chassis

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  docker-compose.yml  gemini-plan.md  mcp_config.json  pyproject.toml  ruff.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
app/: main.py
app/api/v1/: routes.py
app/api/v1/endpoints/: agent.py  auth.py
app/core/: config.py  security.py
app/models/: __init__.py  conversation.py  user.py
app/schemas/: agent.py  auth.py
app/services/: access_control.py  agent_service.py  auth_service.py  database.py  email_service.py  jwt_service.py  local_tools.py  mcp_manager.py  oauth_storage.py  rate_limiter.py  redis_cache.py  session_manager.py  tool_translator.py
docs/: README.md  docs.json  export-openapi.py  installation.mdx  intro.mdx  openapi.json  quickstart.mdx
docs/api-reference/: overview.mdx
docs/configuration/: environment-variables.mdx  mcp-servers.mdx
docs/guides/: authentication.mdx  mcp-integration.mdx  persistence.mdx  tool-development.mdx
scripts/: client_test.py  inspect_mcp.py  smoke_test.py
tests/: test_access_control.py  test_access_control_integration.py  test_agent_service.py  test_agent_service_integration.py  test_auth.py  test_config_updates.py  test_filtering.py  test_jwt_persistence_integration.py  test_local_tools.py  test_main.py  test_mcp_context7.py  test_mcp_oauth_guard.py  test_rate_limiter.py  test_security.py  test_session_manager_persistence.py  test_tool_translator.py
